# Data-Agent-Lab

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
data_agent_lab/: __init__.py  config.py
data_agent_lab/agents/: analyst.py  llm_client.py  pipeline.py  planner.py
data_agent_lab/benchmarks/: __init__.py  analyze_agent.py  base.py  evaluators.py  manifest.py  registry.py  runner.py  stubs.py
data_agent_lab/benchmarks/adapters/: __init__.py  data_agent_bench.py  golden.py  infiagent_dabench.py
data_agent_lab/catalog/: __init__.py  fingerprints.py  ingestion.py  profiler.py  schema.py
data_agent_lab/cli/: main.py
data_agent_lab/reporting/: html.py  markdown.py
data_agent_lab/runtime/: artifacts.py
data_agent_lab/tools/: sql.py  stats.py
data_agent_lab/ui/: streamlit_app.py
data_agent_lab/validation/: claim_checks.py  data_checks.py  evaluator_writer.py  field_extractor.py  join_keys.py  plan_semantics.py  types.py
docs/: EVALUATION_STRATEGY.md  PROJECT_DESIGN.md  PROJECT_DESIGN.zh-CN.md
examples/infiagent_generated/: benchmark_manifest.json
examples/infiagent_generated/data/: sales.csv
examples/infiagent_generated/source/: tasks.jsonl
examples/infiagent_manifest/: benchmark_manifest.json
examples/multi_table/: orders.csv
scripts/: push_to_github.sh
tests/golden/avg_of_avgs_trap/: task.json
tests/golden/broken_join_block/: task.json
tests/golden/csv_revenue_agg/: task.json
tests/unit/: test_benchmark_adapters.py  test_benchmark_analyze.py  test_cli.py  test_pipeline.py  test_plan_semantics.py  test_streamlit_app.py
(+18 files in other folders)
